# govai-brief

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  gemini.py  main.py  pyproject.toml
.github/workflows/: briefing.yml
briefings/: 2026-03-06.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-24.md  2026-03-25.md  2026-03-27.md  2026-04-03.md
govai_brief/: config.py  gemini.py  main.py
